Update AMO -> ATB URLs

--- a/website/calendar/holidays/index.html
+++ b/website/calendar/holidays/index.html
@@ -18,12 +18,12 @@
   <div class="topbox">
     <div class="infobox holiday">
       <aside id="download" class="hide-for-touch">
-        <a id="download-link" class="loading" href="https://addons.mozilla.org/thunderbird/addon/lightning/">
+        <a id="download-link" class="loading" href="https://addons.thunderbird.net/addon/lightning/">
           <span id="version-box" class="title">{{ _('Lightning') }}</span>
           <span class="desc">{{ _('Free download') }}</span>
         </a>
         <small class="download-other">
-          <a href="https://addons.mozilla.org/thunderbird/addon/lightning/versions/">{{ _('Other Systems &amp; Versions') }}</a>
+          <a href="https://addons.thunderbird.net/addon/lightning/versions/">{{ _('Other Systems &amp; Versions') }}</a>
         </small>
       </aside>
       <h1>{{ _('Holiday Calendars') }}</h1>
