--- a/website/calendar/index.html
+++ b/website/calendar/index.html
@@ -21,12 +21,12 @@
       <h1>{{ _('Lightning Calendar') }}</h1>
       <h2>{{ _('Organize your life &mdash; it&rsquo;s about time!') }}</h2>
       <aside id="download" class="hide-for-touch">
-        <a id="download-link" class="loading" href="https://addons.mozilla.org/thunderbird/addon/lightning/">
+        <a id="download-link" class="loading" href="https://addons.thunderbird.net/addon/lightning/">
           <span id="version-box" class="title">{{ _('Lightning') }}</span>
           <span class="desc">{{ _('Free download') }}</span>
         </a>
         <small class="download-other">
-          <a href="https://addons.mozilla.org/thunderbird/addon/lightning/versions/">{{ _('Other Systems &amp; Versions') }}</a>
+          <a href="https://addons.thunderbird.net/addon/lightning/versions/">{{ _('Other Systems &amp; Versions') }}</a>
         </small>
       </aside>
     </div>
