Add "Email" to Thunderbird description!
Added "email", which was missing from the description of Thunderbird. Oops!

--- a/start-page/release/index.html
+++ b/start-page/release/index.html
@@ -25,7 +25,7 @@
       <div>
         <section>
           <h2><i class="fas fa-heart fa-lg"  style="color:#ff0039"></i> {{ _('<a href="%(donate)s">Donate to Thunderbird</a>')|format(donate=donate_url('heading', 'start_page_tb_release')) }}</h2>
-            <p>{{ _('Thunderbird is the leading open source, cross-platform and calendaring client, free for business and personal use. We want it to stay secure and become even better. A donation will allow us to hire developers, pay for infrastructure, and continue to improve.') }}</p>
+            <p>{{ _('Thunderbird is the leading open source, cross-platform email and calendaring client, free for business and personal use. We want it to stay secure and become even better. A donation will allow us to hire developers, pay for infrastructure, and continue to improve.') }}</p>
             <p>{{ _('<strong>Thunderbird is funded by users like you! If you like Thunderbird, please consider making a donation.</strong> The best way for you to ensure Thunderbird remains available is to <a class="more" href="%(donate)s">make a donation.</a>')|format(donate=donate_url('paragraph_text', 'start_page_tb_release')) }}</p>
         </section>
         <section>
