Added style guide to get involved page

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -115,6 +115,13 @@
                         You can also discuss design in the <a href="irc://irc.mozilla.org/maildev">#maildev</a> irc channel, or the <a
                                 href="https://discourse.mozilla.org/c/thunderbird">Discourse category</a>.') }}</p>
                 </section>
+                <section>
+                  <h3>Style Guide</h3>
+                  <ul>
+                    <li><p>{{ _('Looking for the Thunderbird logo, icons, color palette, or other design resources? Check out our <a
+                      href="https://demo.identihub.co/thunderbird">style guide</a>.') }}</p></li>
+                  </ul>
+                </section>
             </div>
         </div>
     </section><!-- end #design -->
