Just as ugly, but now with a link to download the Beta!

--- a/start-page/earlybird/index.html
+++ b/start-page/earlybird/index.html
@@ -18,6 +18,7 @@
        <h1><b><i class="fas fa-exclamation-triangle fa-3x" style="color:#0060df"></i> {{ self.title() }}</b></h1>
        <h2>{{ _('Earlybird is no longer a supported Thunderbird release, and will not be updated!') }}</h2>
        <p><b>{{ _('We recommend downloading the <a href="%(download)s">latest stable version of Thunderbird</a>.')|format(download='https://thunderbird.net') }}</b></p>
+       <p><b>{{ _('If you prefer, you can download the <a href="%(beta)s">latest beta version of Thunderbird</a>.')|format(beta='https://www.thunderbird.net/channel/') }}</b></p>
      </main>
    </body>
  </html>
