Adjusted contact page to point at the Support page for asking a question instead of the mailing list.

--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -46,8 +46,8 @@
                       There you can search for articles, ask questions, and read tutorials.')|format(support='https://support.mozilla.org/products/thunderbird') }}</p>
                 </section>
                 <section>
-                    <h3>{{ _('Email') }}</h3>
-                    <p>{{ _('You can get support via Email by sending a message to our support list at <a href="mailto:support-thunderbird@lists.mozilla.org">support-thunderbird@lists.mozilla.org</a>. <b>Remember to be courteous</b>, as most of the people providing support on this list are volunteers and fellow Thunderbird users like you!') }}</p>
+                    <h3>{{ _('Ask a Question') }}</h3>
+                    <p>{{ _('You can <a href="https://support.mozilla.org/questions/new/thunderbird">ask a question</a> on the support website. <b>Remember to be courteous</b>, as most of the people providing support on this site are volunteers and fellow Thunderbird users like you!') }}</p>
                 </section>
                 <section>
                     <h3>{{ _('Live Chat') }}</h3>
