--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -18,76 +18,76 @@
 
 {% block content %}
 <header id="main-feature">
-    <h1>{{ self.page_title() }}</h1>
-    <h2>{{ self.page_desc() }}</h2>
+  <h1>{{ self.page_title() }}</h1>
+  <h2>{{ self.page_desc() }}</h2>
 </header>
 
 <nav role="directory">
-    <ul class="feature-links">
-        <li><a href="#support">{{ _('Get Support') }}</a></li>
-        <li><a href="#press"</a>{{ _('Press Inquiries')}}
-        <li><a href="#partnerships">{{ _('Partner with Thunderbird') }}</a></li>
-    </ul>
+  <ul class="feature-links">
+    <li><a href="#support">{{ _('Get Support') }}</a></li>
+    <li><a href="#press"</a>{{ _('Press Inquiries')}}
+    <li><a href="#partnerships">{{ _('Partner with Thunderbird') }}</a></li>
+  </ul>
 </nav>
 
 <main role="main">
-    <section id="support">
-        <h2>{{ _('Get Support') }}</h2>
-        <div class="row">
-            <div class="col full">
-                <p>{{ _('How to get support for Thunderbird.') }}</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col full">
-                <section>
-                    <h3>{{ _('Mozilla Support Website') }}</h3>
-                    <p>{{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s">specifically the Thunderbird page</a>.
-                      There you can search for articles, ask questions, and read tutorials.')|format(support='https://support.mozilla.org/products/thunderbird') }}</p>
-                </section>
-                <section>
-                    <h3>{{ _('Ask a Question') }}</h3>
-                    <p>{{ _('You can <a href="https://support.mozilla.org/questions/new/thunderbird">ask a question</a> on the support website. <b>Remember to be courteous</b>, as most of the people providing support on this site are volunteers and fellow Thunderbird users like you!') }}</p>
-                </section>
-                <section>
-                    <h3>{{ _('Live Chat') }}</h3>
-                    <p>{{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird">#thunderbird channel on Mozilla’s IRC</a>.') }}</p>
-                </section>
-            </div>
-        </div>
-    </section><!-- end #support -->
+  <section id="support">
+    <h2>{{ _('Get Support') }}</h2>
+    <div class="row">
+      <div class="col full">
+        <p>{{ _('How to get support for Thunderbird.') }}</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col full">
+        <section>
+          <h3>{{ _('<a href="%(support)s">Mozilla Support Website</a>')|format(support=url('support')) }}</h3>
+            <p>{{ _('The best place to start looking for answers if you have questions about Thunderbird is the Mozilla Support website, <a href="%(support)s">specifically the Thunderbird page</a>.
+              There you can search for articles, ask questions, and read tutorials.')|format(support=url('support')) }}</p>
+        </section>
+        <section>
+          <h3>{{ _('<a href="https://support.mozilla.org/questions/new/thunderbird">Ask a Question</a>') }}</h3>
+            <p>{{ _('You can ask a question on the support website. <b>Remember to be courteous</b>, as most of the people providing support on this site are volunteers and fellow Thunderbird users like you!') }}</p>
+        </section>
+        <section>
+          <h3>{{ _('<a href="irc://irc.mozilla.org/thunderbird">Live Chat on IRC</a>') }}</h3>
+          <p>{{ _('You can chat with other users and members of the Thunderbird team on the <a href="irc://irc.mozilla.org/thunderbird">#thunderbird channel on Mozilla’s IRC</a>. You can use IRC via Thunderbird in by following ') }}</p>
+        </section>
+      </div>
+    </div>
+  </section><!-- end #support -->
 
-    <section id="press">
-        <h2>{{ _('Press Inquiries') }}</h2>
-        <div class="row">
-            <div class="col full">
-                <p>{{ _('Information on how members of the press to reach out to us.') }}</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col full">
-                <section>
-                    <p>{{ _('Are you a member of the press who would like to ask us a question about Thunderbird? You can reach our team at <a href="mailto:press@thunderbird.net">press@thunderbird.net</a>.') }}</p>
-                </section>
-            </div>
-        </div>
-    </section><!-- end #press -->
+  <section id="press">
+    <h2>{{ _('Press Inquiries') }}</h2>
+    <div class="row">
+      <div class="col full">
+        <p>{{ _('Information on how members of the press to reach out to us.') }}</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col full">
+        <section>
+          <p>{{ _('Are you a member of the press who would like to ask us a question about Thunderbird? You can reach our team at <a href="mailto:press@thunderbird.net">press@thunderbird.net</a>.') }}</p>
+        </section>
+      </div>
+    </div>
+  </section><!-- end #press -->
 
-    <section id="partnerships">
-        <h2>{{ _('Partnerships') }}</h2>
-        <div class="row">
-            <div class="col full">
-                <p>{{ _('Partner with the Thunderbird Project.') }}</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col full">
-                <section>
-                    <p>{{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve our the experience of using Thunderbird?
-                      Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}</p>
-                </section>
-            </div>
-        </div>
-    </section><!-- end #partnerships -->
+  <section id="partnerships">
+    <h2>{{ _('Partnerships') }}</h2>
+    <div class="row">
+      <div class="col full">
+        <p>{{ _('Partner with the Thunderbird Project.') }}</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col full">
+        <section>
+          <p>{{ _('Are you interested in partnering with the Thunderbird project? Do you provide services that could improve the experience of using Thunderbird?
+            Do you deploy Thunderbird at scale and want to provide a better experience for your users? Please Email us at <a href="mailto:partnerships@thunderbird.net">partnerships@thunderbird.net</a>.') }}</p>
+        </section>
+      </div>
+    </div>
+  </section><!-- end #partnerships -->
 </main>
 {% endblock %}
