Link to the new style guide at style.thunderbird.net.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -119,7 +119,7 @@
                   <h3>Style Guide</h3>
                   <ul>
                     <li><p>{{ _('Looking for the Thunderbird logo, icons, color palette, or other design resources? Check out our <a
-                      href="https://demo.identihub.co/thunderbird">style guide</a>.') }}</p></li>
+                      href="%(style_guide)s">style guide</a>.')|format(style_guide=url('thunderbird.style')) }}</p></li>
                   </ul>
                 </section>
             </div>
