Add information about coordination

--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -67,7 +67,7 @@
     <div class="row">
       <div class="col full">
         <section>
-          <p>{{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report. You may also contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a>. If necessary, email encryption with members of our team can be arranged.') }}</p>
+          <p>{{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report. Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don't get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}</p>
         </section>
       </div>
     </div>
