Initial work on new less style

--- a/website/index.html
+++ b/website/index.html
@@ -15,7 +15,8 @@
 {% endblock %}
 
 {% block page_css %}
-  <link href="/media/css/thunderbird-landing.css" rel="stylesheet" type="text/css" />
+  <link href="/media/css/normalize.css" rel="stylesheet" type="text/css" />
+  <link href="/media/css/thunderbird-style.css" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block content %}
