--- a/website/contact/index.html
+++ b/website/contact/index.html
@@ -105,5 +105,21 @@
       </div>
     </div>
   </section><!-- end #partnerships -->
+
+  <section id="security">
+    <h2>{{ _('Security') }}</h2>
+    <div class="row">
+      <div class="col full">
+        <p>{{ _('For developers who would like to report security issues.') }}</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col full">
+        <section>
+          <p>{{ _('To report a security issue related to Thunderbird, please register an account at <a href="https://bugzilla.mozilla.org/">Bugzilla</a>, and describe the issue in a new Thunderbird <a href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Thunderbird">bug report</a>. If you select the <i>Security checkmark</i> before you submit, then only members of our security team will have access to your report. Bugzilla is also our preferred medium for coordinating the disclosure of security incidents and for discussing embargo dates. If you don\'t get a timely response in Bugzilla, please contact us at <a href="mailto:security@thunderbird.net">security@thunderbird.net</a> and mention the respective bug numbers. Encrypted email can be arranged on demand.') }}</p>
+        </section>
+      </div>
+    </div>
+  </section><!-- end #security -->
 </main>
 {% endblock %}
