Addressed feedback from review from Andrei.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -47,9 +47,8 @@
                 <section>
                     <h3>{{ _('What is Open Source Software?') }}</h3>
                     <p>{{ _('Thunderbird is open source software, meaning that anyone can inspect, modify, enhance it, and share it. But the fun is not just for programmers!
-                        Thunderbird is created by a community of designers, translators, people who do documentation and support, as well as developers. We invite anyone to come
-                        and participate in the creation of Thunderbird regardless of your skillset, we’re sure there is something you can add to our community 
-                        and contribute to the project.') }}</p>
+                        Thunderbird is created by a community of designers, translators, documentation writers and support people in addition to developers. We invite anyone to come and 
+                        participate in the creation of Thunderbird. Regardless of your skillset, we’re sure there is something you can add to our community and project.') }}</p>
                 </section>
             </div>
         </div>
