Add description and ways to contribute to "Get Involved" page. (#107)
* Adding general information on what open source software is and noting that Thunderbird is created by an online community.

--- a/website/get-involved/index.html
+++ b/website/get-involved/index.html
@@ -24,6 +24,7 @@
 
 <nav role="directory">
     <ul class="feature-links">
+        <li><a href="#opensource">{{ _('Why Contribute?') }}</a></li>
         <li><a href="#development">{{ _('Development') }}</a></li>
         <li><a href="#design">{{ _('Design') }}</a></li>
         <li><a href="#documentation">{{ _('Documentation') }}</a></li>
@@ -34,6 +35,24 @@
 </nav>
 
 <main role="main">
+    <section id="opensource">
+      <h2>{{ _('Why Contribute?') }}</h2>
+      <div class="row">
+            <div class="col full">
+                <p>{{ _('Thunderbird is created by an online community of volunteers.') }}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col full">
+                <section>
+                    <h3>{{ _('What is Open Source Software?') }}</h3>
+                    <p>{{ _('Thunderbird is open source software, meaning that anyone can inspect, modify, enhance it, and share it. But the fun is not just for programmers!
+                        Thunderbird is created by a community of designers, translators, documentation writers and support people in addition to developers. We invite anyone to come and 
+                        participate in the creation of Thunderbird. Regardless of your skillset, we’re sure there is something you can add to our community and project.') }}</p>
+                </section>
+            </div>
+        </div>
+    </section>
     <section id="development">
         <h2>{{ _('Development') }}</h2>
         <div class="row">
