--- a/website/index.html
+++ b/website/index.html
@@ -5,64 +5,58 @@
 {% extends "_includes/base-resp.html" %}
 
 {% block page_title_prefix %}{{_('Thunderbird')}} — {% endblock %}
-{% block page_title %}{{ _('Software made to make email easier.') }}{% endblock %}
+{% block page_title %}{{ _('Software made to make email easier') }}{% endblock %}
 {% block page_desc %}{{ _('Thunderbird is a free email application that’s easy to set up and customize - and it’s loaded with great features!') }}{% endblock %}
 
-{% block page_css %}
-  <link href="/media/css/normalize.css" rel="stylesheet" type="text/css" />
-  <link href="/media/css/thunderbird-style.css" rel="stylesheet" type="text/css" />
+{% block page_css %}{% endblock %}
+
+{% block header_content %}
+  <section class="text-center text-white flex flex-col items-center mb-20">
+    <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
+    <p class="font-lg tracking-wide leading-normal max-w-xl mb-20">{{ self.page_desc() }}</p>
+    <div class="download-button-wrapper">
+      {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
+    </div>
+  </section>
+  <section class="flex max-w-5xl self-center">
+    {{ platform_img('thunderbird/landing/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
+  </section>
 {% endblock %}
 
 {% block content %}
 
-<main role="main">
-  <div id="main-feature">
-    <div class="row">
-      {{ high_res_img('thunderbird/landing/logo.png', {'alt': _('Thunderbird'), 'width': '120', 'height': '120'}) }}
-      <h1 class="large">{{ self.page_title() }}</h1>
-      <p class="large">{{ self.page_desc() }}</p>
-      <div class="download-button-wrapper">
-        {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
-      </div>
+  <div itemscope itemtype="http://schema.org/SoftwareApplication">
+    <meta itemprop="name" content="{{_('Thunderbird')}}">
+    <meta itemprop="description" content="{% block product_desc %}{{ self.page_desc() }}{% endblock %}">
+    <meta itemprop="url" content="https://www.thunderbird.net">
+    <meta itemprop="image" content="{% block product_logo %}{{ static('img/thunderbird/thunderbird-256.png') }}{% endblock %}">
+    <div itemprop="author" itemscope itemtype="http://schema.org/Organization">
+      <meta itemprop="name" content="{{_('Mozilla')}}">
+    </div>
+    <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+      <meta itemprop="price" content="0">
+    </div>
+    <meta itemprop="softwareVersion" content="{{ latest_thunderbird_version }}">
+    <meta itemprop="releaseNotes" content="{{ settings.CANONICAL_URL }}/thunderbird/{{ latest_thunderbird_version }}/releasenotes/">
+    <meta itemprop="applicationCategory" content="CommunicationApplication">
+    <meta itemprop="operatingSystem" content="Windows">
+    <meta itemprop="operatingSystem" content="Mac">
+    <meta itemprop="operatingSystem" content="Linux">
+  </div>
+
+  <div itemscope itemtype="http://schema.org/Product">
+    <meta itemprop="name" content="{{_('Thunderbird')}}">
+    <meta itemprop="description" content="{{ self.product_desc() }}">
+    <meta itemprop="url" content="{{ settings.CANONICAL_URL }}/thunderbird/">
+    <meta itemprop="image" content="{{ self.product_logo() }}">
+    <meta itemprop="logo" content="{{ self.product_logo() }}">
+    <div itemprop="manufacturer" itemscope itemtype="http://schema.org/Organization">
+      <meta itemprop="name" content="{{_('Mozilla')}}">
+    </div>
+    <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+      <meta itemprop="price" content="0">
     </div>
   </div>
-  <div id="thunderbird-screenshot">
-    {{ platform_img('thunderbird/landing/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
-  </div>
-</main>
-
-<div itemscope itemtype="http://schema.org/SoftwareApplication">
-  <meta itemprop="name" content="{{_('Thunderbird')}}">
-  <meta itemprop="description" content="{% block product_desc %}{{ self.page_desc() }}{% endblock %}">
-  <meta itemprop="url" content="https://www.thunderbird.net">
-  <meta itemprop="image" content="{% block product_logo %}{{ static('img/thunderbird/thunderbird-256.png') }}{% endblock %}">
-  <div itemprop="author" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="{{_('Mozilla')}}">
-  </div>
-  <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-    <meta itemprop="price" content="0">
-  </div>
-  <meta itemprop="softwareVersion" content="{{ latest_thunderbird_version }}">
-  <meta itemprop="releaseNotes" content="{{ settings.CANONICAL_URL }}/thunderbird/{{ latest_thunderbird_version }}/releasenotes/">
-  <meta itemprop="applicationCategory" content="CommunicationApplication">
-  <meta itemprop="operatingSystem" content="Windows">
-  <meta itemprop="operatingSystem" content="Mac">
-  <meta itemprop="operatingSystem" content="Linux">
-</div>
-
-<div itemscope itemtype="http://schema.org/Product">
-  <meta itemprop="name" content="{{_('Thunderbird')}}">
-  <meta itemprop="description" content="{{ self.product_desc() }}">
-  <meta itemprop="url" content="{{ settings.CANONICAL_URL }}/thunderbird/">
-  <meta itemprop="image" content="{{ self.product_logo() }}">
-  <meta itemprop="logo" content="{{ self.product_logo() }}">
-  <div itemprop="manufacturer" itemscope itemtype="http://schema.org/Organization">
-    <meta itemprop="name" content="{{_('Mozilla')}}">
-  </div>
-  <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-    <meta itemprop="price" content="0">
-  </div>
-</div>
 
 {% endblock %}
 
