--- a/website/index.html
+++ b/website/index.html
@@ -111,10 +111,49 @@
       </article>
     </section>
 
-    <a href="{{ url('blog') }}" class="btn-body">{{_('Read the Blog')}}
+    <a href="{{ url('blog') }}" class="btn-body mb-10">{{_('Read the Blog')}}
       <span>{{ svg('chevron-right') }}</span>
     </a>
   </section>
+
+  <section class="pt-20 pb-20 flex max-w-6xl mx-auto justify-between pl-8 pr-8 mb-10">
+    <aside class="flex flex-col flex-1 max-w-lg">
+      <h3 class="header-section">{{ _('Thunderbird is funded by users like you')}}</h3>
+      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
+        {{ _('Thunderbird is both free and freedom respecting, but we\'re also completely funded by donations! Help us sustain the project and continue to improve.') }}
+      </p>
+      <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0" target="_blank">
+        <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
+      </a>
+    </aside>
+
+    <aside class="flex flex-col flex-1 max-w-lg">
+      <h3 class="header-section">{{ _('Join our Newsletter')}}</h3>
+      <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
+        {{ _('Keep up with the latest and greatest updates on news, features, events, and previews, and get a sneak peek on the upcoming releases.') }}
+      </p>
+      <!-- Begin Mailchimp Signup Form -->
+      <form action="https://mozilla.us12.list-manage.com/subscribe/post?u=f8051cc8637cf3ff79661f382&amp;id=9badb0cec2"
+            class="shadow flex items-center rounded-md self-start p-1"
+            method="post" id="mc-embedded-subscribe-form"
+            name="mc-embedded-subscribe-form"
+            target="_blank">
+        <input id="mce-EMAIL" name="EMAIL" type="email" placeholder="{{ _('Your Email') }}"
+          class="w-64 appearance-none border-none p-2 tracking-wide font-semibold font-regular" required>
+        <button type="submit" id="mc-embedded-subscribe" class="btn-newsletter">{{ _('Sign me up!') }}</button>
+        <!-- Prevent Bot signups -->
+        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+            name="b_f8051cc8637cf3ff79661f382_9badb0cec2" tabindex="-1" value=""></div>
+      </form>
+      <!--End mc_embed_signup-->
+    </aside>
+  </section>
+
+  <section class="pt-20 pb-20 flex bg-calendar">
+    <!-- platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) -->
+  </section>
+
+  {% include '_includes/site-prefooter.html' %}
 
   <div itemscope itemtype="http://schema.org/SoftwareApplication">
     <meta itemprop="name" content="{{_('Thunderbird')}}">
@@ -152,3 +191,12 @@
 {% endblock %}
 
 {% block email_form %}{% endblock %}
+
+{% block js %}
+  <script id="mcjs">
+    ! function (c, h, i, m, p) {
+      m = c.createElement(h), p = c.getElementsByTagName(h)[0], m.async = 1, m.src = i, p.parentNode.insertBefore(m, p)
+    }(document, "script",
+      "https://chimpstatic.com/mcjs-connected/js/users/f8051cc8637cf3ff79661f382/d83086345c2025e687eadea2b.js");
+  </script>
+{% endblock %}
