Replace escaped apostrophes with unicode

--- a/website/index.html
+++ b/website/index.html
@@ -120,7 +120,7 @@
     <aside class="flex flex-col flex-1 max-w-lg">
       <h3 class="header-section">{{ _('Thunderbird is funded by users like you')}}</h3>
       <p class="font-lg tracking-wider leading-loose mb-8 mt-0 flex-1">
-        {{ _('Thunderbird is both free and freedom respecting, but we\'re also completely funded by donations! Help us sustain the project and continue to improve.') }}
+        {{ _('Thunderbird is both free and freedom respecting, but we’re also completely funded by donations! Help us sustain the project and continue to improve.') }}
       </p>
       <a href="{{ donate_url('home_page_body') }}" class="btn-donate self-start ml-0 mr-0" target="_blank">
         <span class="inline-block w-3 mr-1">{{ svg('heart') }}</span> {{_('Donate')}}
