--- a/website/index.html
+++ b/website/index.html
@@ -14,7 +14,7 @@
   <section class="text-center text-white flex flex-col items-center mb-12">
     <h1 class="font-hero font-thin mt-10 mb-8">{{ self.page_title() }}</h1>
     <p class="font-xl tracking-wide leading-relaxed max-w-xl mb-16">{{ self.page_desc() }}</p>
-    <div class="download-button-wrapper">
+    <div class="tracking-wider">
       {{ download_thunderbird(force_direct=true, alt_copy=_('Free Download')) }}
     </div>
   </section>
@@ -149,8 +149,31 @@
     </aside>
   </section>
 
-  <section class="pt-20 pb-20 flex bg-calendar">
-    <!-- platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Thunderbird screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) -->
+  <section class="pt-20 pb-10 flex justify-between bg-calendar pr-20">
+    <aside class="flex flex-1 -ml-20">
+      {{ platform_img('thunderbird/calendar/screenshot.png', {'alt': _('Lightning Calendar screenshot'), 'high-res': True, 'l10n': True, 'platforms': ('windows', 'linux', 'mac')}) }}
+    </aside>
+
+    <aside class="flex flex-col flex-1 max-w-md ml-16 mr-16 pt-12">
+      <h3 class="header-section">
+        <span>{{ svg('calendar') }}</span>
+        <aside class="flex flex-col">
+          {{ _('Lightning Calendar')}}
+          <small class="font-normal font-md tracking-normal normal-case">
+            {{ _('Organize your life — it’s about time!') }}
+          </small>
+        </aside>
+      </h3>
+      <p class="font-lg tracking-wider leading-loose mb-6">
+        {{ _('Organize your schedule and life’s important events in a calendar that’s fully integrated with your Thunderbird email.') }}
+      </p>
+      <p class="font-lg tracking-wider leading-loose mb-10">
+        {{ _('Manage multiple calendars, create your daily to do list, invite friends to events, and subscribe to public calendars.') }}
+      </p>
+      <a href="{{ url('thunderbird.features') }}" class="btn-body self-start">{{_('Know your rights')}}
+        <span>{{ svg('chevron-right') }}</span>
+      </a>
+    </aside>
   </section>
 
   {% include '_includes/site-prefooter.html' %}
